--- a/package.json
+++ b/package.json
@@ -7,14 +7,21 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "aws-sdk": "^2.774.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.5",
     "morgan": "~1.9.1",
-    "mysql": "^2.18.1"
+    "multer": "^1.4.2",
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.4.13",
+    "sha1": "^1.1.1",
+    "uuid": "^8.3.1"
   }
 }
